Very basic (no operations!) 0th cut at sts.
Builds.  Doesn't crash when running.
Decodes operations, but does nothing useful; dummy output for now.

output routines for "AssumeRoleResponse".

Cannibalised old errorresponse to make this.
also "make_fake_response" to give it a response to print.
For this, sts execute always dumps out this fake response.

handle post as well as get: get arguments for sts.
generate both regular response and errors correctly.

Implement dummy versions of AssumeRole DecodeAuthorizationMessage.

DecodeAuthorizationMessage decode args, dump fake result.
AssumeRole decode args, dump fake result.
Also a bunch of whitespace/tab fixes.

AssumeRoleWithWebIdentityResponse decode args, dump fake result.

GetFederationTokenResponse decode args, dump fake result.

GetSessionTokenResponse decode args, dump fake result.

AssumeRoleWithSAML decode args, dump fake result.

RGWHandler is now RGWHandler_REST: change from ceph master.
dump_bucket_from_state() - no buckets in sts.
various: string id is now rgw_user id: change from ceph master.

Elsewhere, I made more generic routines for use with sts.
Using that here,
use new "generic" form of rgw_rest_init()

For now, I'm using a newer version of civetweb.  So,
mg_get_request_info returns a const: change from civetweb.

The rest reflect changes from ceph master pretty much:
RGWHandler_STS -> RGWHandler_REST_STS
Add cct to STSProcess since RGWProcess has it.
RGWClientIO -> RGWStreamIO.
When initializing rstate - have to pass in userinfo.
abort_early() takes a 4th parm handler now.
s->user is now a pointer.
thread->create now takes a string.
global_init_daemonize: delete 2nd parm.

automake changes:
Lines to make "rgw-sts" binary.   Also, for the rgw library,
add rgw_rest_objstore.cc where I split out some functionality.

README for STS!

Have STS default off for now.  Document parm as WITH_RGW_STS, since
that's what I used.

autoconf/configure:
Add enable-sts arg: defaults off, don't build rgw-sts unless it

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -354,6 +354,9 @@ if (${WITH_RADOSGW})
   endif()
 endif (${WITH_RADOSGW})
 
+#option for STS
+option(WITH_RGW_STS "Rados Secure Token Service is enabled" OFF)
+
 #option for CephFS
 option(WITH_CEPHFS "CephFS is enabled" ON)
 
