--- a/src/erasure-code/jerasure/Makefile.am
+++ b/src/erasure-code/jerasure/Makefile.am
@@ -38,7 +38,7 @@ jerasure_sources = \
   erasure-code/jerasure/ErasureCodePluginJerasure.cc \
   erasure-code/jerasure/ErasureCodeJerasure.cc
 
-erasure-code/jerasure/ErasureCodePluginJerasure.cc: ./ceph_ver.h
+erasure-code/jerasure/ErasureCodePluginJerasure.cc: ceph_ver.h
 
 libec_jerasure_generic_la_SOURCES = ${jerasure_sources}
 libec_jerasure_generic_la_CFLAGS = ${AM_CFLAGS}  \
@@ -143,6 +143,6 @@ if LINUX
 libec_jerasure_la_LDFLAGS += -export-symbols-regex '.*__erasure_code_.*'
 endif
 
-erasure-code/jerasure/ErasureCodePluginSelectJerasure.cc: ./ceph_ver.h
+erasure-code/jerasure/ErasureCodePluginSelectJerasure.cc: ceph_ver.h
 
 erasure_codelib_LTLIBRARIES += libec_jerasure.la
