--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1392,13 +1392,15 @@ if(${WITH_RADOSGW})
 
   set(civetweb_common_files civetweb/src/civetweb.c)
   add_library(civetweb_common_objs OBJECT ${civetweb_common_files})
-  target_include_directories(civetweb_common_objs PUBLIC
-	"${CMAKE_SOURCE_DIR}/src/civetweb/include")
+  target_include_directories(civetweb_common_objs PRIVATE
+	"${CMAKE_BINARY_DIR}/src/civetweb/include")
+  set_property(TARGET civetweb_common_objs
+    APPEND PROPERTY COMPILE_DEFINITIONS USE_IPV6=1)
   if(USE_OPENSSL)
     set_property(TARGET civetweb_common_objs
       APPEND PROPERTY COMPILE_DEFINITIONS NO_SSL_DL=1)
-    target_include_directories(civetweb_common_objs PUBLIC
-      "${SSL_INCLUDE_DIR}")
+#    target_include_directories(civetweb_common_objs PUBLIC
+#      "${SSL_INCLUDE_DIR}")
   endif(USE_OPENSSL)
 
   if (DEFINED LIBSSL_SONAME)
